
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ uint8_t ;


 size_t CMD_LEN_OFS ;
 int MAP_ANON ;
 int MAP_PRIVATE ;
 int MEM_COMMIT ;
 int MEM_RELEASE ;
 int PAGE_EXECUTE_READWRITE ;
 int PROT_EXEC ;
 int PROT_READ ;
 int PROT_WRITE ;
 void* VirtualAlloc (int ,size_t,int ,int ) ;
 int VirtualFree (void*,size_t,int ) ;
 int bin2file (void*,size_t) ;
 int memcpy (void*,char*,size_t) ;
 void* mmap (int ,size_t,int,int,int,int ) ;
 int munmap (void*,size_t) ;
 int printf (char*) ;
 int strlen (char*) ;
 void stub1 () ;

void xcode(void *code, size_t code_len, char *cmd, size_t cmd_len)
{
  void *bin;
  uint8_t *p;
  char args[]="\xFF-c\xFF/bin//sh\x00";
  size_t arg_len;

  arg_len=strlen(args) + 1;

  printf ("[ executing code...\n");





  bin=mmap (0, code_len + cmd_len + arg_len,
    PROT_EXEC | PROT_WRITE | PROT_READ,
    MAP_ANON | MAP_PRIVATE, -1, 0);

  if (bin!=((void*)0))
  {
    p=(uint8_t*)bin;

    memcpy (p, code, code_len);

    p[CMD_LEN_OFS] = (uint8_t)cmd_len;

    memcpy ((void*)&p[code_len], cmd, cmd_len);

    memcpy ((void*)&p[code_len+cmd_len], args, arg_len);


    bin2file(bin, code_len+cmd_len+arg_len);


    ((void(*)())bin)();




    munmap (bin, code_len+cmd_len+arg_len);

  }
}
